2009-09-14  Charles Wilson  <cwilso11@users.sourceforge.net>

	Restructure for forthcoming 0.4 release.
	* AUTHORS: Update.
	* README: Update.
	* LICENSE: New.
	* INSTALL: Removed.
	* NEWS: Add actual content.
	* README: Ditto.
	* TODO: New.
	* .cvsignore: New.
	* autogen.sh: Running configure is optional (-c). Update
	for automake-1.11. Echo commands. Invoke msys-here/autogen.sh
	* Makefile.am: Rewrite. Add msys-here.
	* configure.ac: Don't build dos2unix, unix2dos, drmingw, or
	pexports. Ensure built scripts are executable. No longer look
	for windres. Update to automake-1.11. Add msys-here.
	* build-aux: New directory.
	* build-aux/.cvsignore: New.
	* m4: New directory.
	* m4/.cvsignore: New.
	* redir/Makefile.am: Consolidate docdirs.
	* reimp/Makefile.am: Consolidate docdirs.
	* res2coff/Makefile.am: Consolidate docdirs.
	* scripts/Makefile.am: Consolidate docdirs. Use modern idioms to
	build and install scripts and documentation.
	* redir/.cvsignore: New.
	* reimp/.cvsignore: New.
	* res2coff/.cvsignore: New.
	* scripts/.cvsignore: New.

2003-11-25 18:18  jrfonseca

	* drmingw/: bucomm.h, budbg.h, debug.c, debug.h, debugx.c,
	exchndl.c, ieee.c, ieee.h, prdbg.c, rdcoff.c, rddbg.c, stabs.c,
	symbols.c, include/dis-asm.h, include/filenames.h,
	include/getopt.h, include/libcoff.h, include/libiberty.h,
	include/safe-ctype.h: Merge with latest binutils source.

2003-11-25 16:53  jrfonseca

	* ChangeLog, configure.ac, scripts/dsw2mak.in: Version bump.
	Removed some redundant funciton checks in autoconf. Update
	changelog.

2003-11-25 16:51  jrfonseca

	* pexports/hlex.l: input()/unput() must be called within the
	actions.

2003-11-25 15:30  jrfonseca

	* scripts/dsw2mak.in: Strip DOS line-endings from DSW too (Amitai
	Yuval)

2003-05-24 11:57  jrfonseca

	* scripts/dsw2mak.in: Changed the dsw2mak license to LPGL.

2003-02-04 01:49  infidel

	* ChangeLog, redir/Makefile.am, reimp/Makefile.am,
	res2coff/Makefile.am: 2003-02-04 01:45	infidel
	